<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kwasny.test21.MainActivity">

    <Button
        android:layout_width="180dp"
        android:layout_height="260dp"
        android:text="A"
        android:id="@+id/button_a"
        android:onClick="btaclick"
        />
    <Button
        android:layout_width="180dp"
        android:layout_height="260dp"
        android:text="B"
        android:id="@+id/button_b"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/button_a"
        android:onClick="btbclick"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="180dp"
        android:layout_height="260dp"
        android:text="C"
        android:id="@+id/button_c"
        android:layout_below="@+id/button_a"
        android:layout_toStartOf="@+id/button_b"
        android:layout_toLeftOf="@+id/button_b"
        android:onClick="btcclick"/>
    <Button
        android:layout_width="180dp"
        android:layout_height="260dp"
        android:text="D"
        android:id="@+id/button_d"
        android:layout_below="@+id/button_a"
        android:layout_alignLeft="@+id/button_b"
        android:layout_alignStart="@+id/button_b"
        android:onClick="btdclick"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
